# toml26

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cfg.toml  demo.cpp
test/: CMakeLists.txt  README.md
test/cmake/: run_fail_case.cmake
test/fail_array_of_tables_unsupported/: case.toml
test/fail_array_table_redefine/: case.toml
test/fail_comment_control_char/: main.cpp
test/fail_date_century_non_leap/: case.toml
test/fail_date_invalid_day_30_month/: case.toml
test/fail_date_non_leap_feb29/: case.toml
test/fail_datetime_invalid_day/: case.toml
test/fail_dotted_header_conflict/: case.toml  main.cpp
test/fail_get_mixed_ct_bad_segment/: case.toml  main.cpp
test/fail_get_multi_key_missing/: case.toml  main.cpp
test/fail_inline_table_closed/: case.toml
test/fail_key_invalid_bare_char/: case.toml
test/fail_key_member_access_key_name/: case.toml  main.cpp
test/fail_key_member_access_m_canonical/: case.toml  main.cpp
test/fail_line_ending_cr_only/: main.cpp
test/fail_matrix_dotted_then_aot/: case.toml
test/fail_matrix_dotted_then_scalar/: case.toml
test/fail_matrix_inline_then_dotted/: case.toml
test/fail_matrix_inline_then_header/: case.toml
test/fail_matrix_inline_then_nested_header/: case.toml
test/fail_matrix_scalar_then_aot/: case.toml
test/fail_matrix_scalar_then_table/: case.toml
test/fail_numeric_invalid_float/: case.toml
test/fail_string_invalid_U_range/: case.toml
test/fail_string_invalid_escape/: case.toml
test/fail_string_invalid_hex/: case.toml
test/fail_string_invalid_u_short/: case.toml
test/fail_string_invalid_u_surrogate/: case.toml
test/fail_string_multiline_key/: case.toml
test/fail_string_newline_in_basic/: case.toml
test/fail_string_newline_in_literal/: case.toml
test/fail_string_unterminated_basic/: case.toml
test/fail_string_unterminated_literal/: case.toml
test/pass_array_of_tables_basic/: case.toml  main.cpp
test/pass_array_of_tables_nested/: case.toml  main.cpp
test/pass_at_basic/: case.toml  main.cpp
test/pass_at_or_missing/: case.toml  main.cpp
test/pass_at_or_type_mismatch/: case.toml  main.cpp
test/pass_comment_control_chars/: case.toml  main.cpp
test/pass_date_semantics/: case.toml  main.cpp
test/pass_dotted_keys/: case.toml  main.cpp
test/pass_find_optional/: case.toml  main.cpp
test/pass_for_range_for/: case.toml  main.cpp
test/pass_for_template_for/: case.toml  main.cpp
test/pass_get_mixed_ct_path/: case.toml  main.cpp
test/pass_get_multi_key_path/: case.toml  main.cpp
test/pass_inline_table/: case.toml  main.cpp
(+60 files in other folders)
